# ChangeLog for dev-lang/swig
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/swig/ChangeLog,v 1.116 2008/04/18 17:21:31 nixnut Exp $

  18 Apr 2008; nixnut <nixnut@gentoo.org> swig-1.3.34.ebuild:
  Stable on ppc wrt bug 217408

  15 Apr 2008; Raúl Porcel <armin76@gentoo.org> swig-1.3.34.ebuild:
  alpha/ia64/sparc stable wrt #217408

  14 Apr 2008; Markus Meier <maekke@gentoo.org> swig-1.3.34.ebuild:
  amd64/x86 stable, bug #217408

  14 Apr 2008; Jeroen Roovers <jer@gentoo.org> swig-1.3.34.ebuild:
  Stable for HPPA (bug #217408).

  09 Apr 2008; Jeroen Roovers <jer@gentoo.org> swig-1.3.35.ebuild:
  Marked ~hppa (bug #216855).

  08 Apr 2008; Alexis Ballier <aballier@gentoo.org> swig-1.3.35.ebuild:
  keyword ~x86-fbsd

  08 Apr 2008; Raúl Porcel <armin76@gentoo.org> swig-1.3.35.ebuild:
  Re-add ~ia64 wrt #216855

  08 Apr 2008; Marijn Schouten <hkBst@gentoo.org> -swig-1.3.21.ebuild,
  -swig-1.3.25.ebuild, -swig-1.3.27.ebuild, -swig-1.3.29.ebuild,
  -swig-1.3.29-r1.ebuild:
  remove old cruft

*swig-1.3.35 (08 Apr 2008)

  08 Apr 2008; Marijn Schouten <hkBst@gentoo.org> +swig-1.3.35.ebuild:
  bump, adds octave support

  11 Mar 2008; <ricmm@gentoo.org> swig-1.3.21.ebuild, swig-1.3.25.ebuild,
  swig-1.3.31.ebuild:
  Drop to ~mips to match deps

*swig-1.3.34 (02 Mar 2008)

  02 Mar 2008; Marijn Schouten <hkBst@gentoo.org> +swig-1.3.34.ebuild:
  bump

  06 Feb 2008; Ferris McCormick <fmccor@gentoo.org> swig-1.3.33.ebuild:
  Sparc stable, Bug #209052. (chicken is package-masked for swig because sparc
  does not support it.)

  17 Dec 2007; Marijn Schouten <hkBst@gentoo.org> -swig-1.3.32.ebuild:
  remove 1.3.32 for bug 199831

*swig-1.3.33 (24 Nov 2007)

  24 Nov 2007; Marijn Schouten <hkBst@gentoo.org> +swig-1.3.33.ebuild:
  bump

  21 Nov 2007; Joe Peterson <lavajoe@gentoo.org> swig-1.3.32.ebuild:
  Added ~x86-fbsd keyword (bug #199368)

  21 Nov 2007; Raúl Porcel <armin76@gentoo.org> swig-1.3.32.ebuild: