@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/swig
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swig/ChangeLog,v 1.116 2008/04/18 17:21:31 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swig/ChangeLog,v 1.117 2008/06/25 09:04:27 hkbst Exp $
+
+*swig-1.3.36 (25 Jun 2008)
+
+  25 Jun 2008; Marijn Schouten <hkBst@gentoo.org> +swig-1.3.36.ebuild:
+  bump
 
   18 Apr 2008; nixnut <nixnut@gentoo.org> swig-1.3.34.ebuild:
   Stable on ppc wrt bug 217408
